cmake_minimum_required(VERSION 3.28)
project(Lab_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab_3 main.cpp
        cmake-build-debug/Question2.cpp
        cmake-build-debug/Question2.h
        Question2.cpp
        Question2.h
        Question2.cpp
        Question3.cpp
        Question3.h
        Question3.cpp
        Question4.cpp
        Question4.h
        Question4.cpp
        Question5.cpp
        Question5.h
        Question5.h
        Question5.cpp)
