cmake_minimum_required(VERSION 3.28)
project(lab_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(lab_1 main.c
        "Question 3/question three.c"
        "Question 4/question four.cpp"
        "Question 4/question four.h"
        "Question 4/question four.c"
        "Question 4/question four second.c"
        "Question 5/question five.c")
