cmake_minimum_required(VERSION 3.28)
project(lab_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab_2 main.cpp
        "Question 2/lab_2_Question_2.cpp"
        "Question 2/lab_2_Question_2.h"
        "Question 3/lab3Question3.cpp"
        "Question 3/lab3Question3.h"
        "Question 3/lab2Question3.cpp"
        "Question 3/lab2Question3.h"
        "Question 4/lab2Question4.cpp"
        "Question 4/lab2Question4.h"
        "Question 5/lab2Question5.cpp"
        "Question 5/lab2Question5.h"
        "Question 5/lab2Question5Code2.cpp"
        "Question 5/lab2Question5Code2.h"
        "Question 5/lab2Question5Code3.cpp"
        "Question 5/lab2Question5Code3.h")
